# terminal-profiles

./: Cargo.toml  README.md  update.sh
.github/workflows/: release.yml  test.yml
assets/: settings.json
src/: lib.rs  main.rs
